--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -8,7 +8,15 @@
     "title": "LOSL-CON 2025",
     "subtitle": "Conférence dédiée à la cybersécurité, l’open source et Linux",
     "highlight": "Les inscriptions commencent bientôt",
-    "cta": "Rejoindre la communauté"
+    "cta": "Rejoindre la communauté",
+    "date": "22 novembre 2025",
+    "place": "Institut Français du Togo",
+    "countdown": {
+      "days": "Jours",
+      "hours": "Heures",
+      "minutes": "Minutes",
+      "seconds": "Secondes"
+    }
   },
   "about": {
     "heading": "À propos de LOSL-CON",
