--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -32,7 +32,7 @@
     "stats": {
   "speakers": "5",
       "speakers_label": "Speakers experts",
-  "attendees": "150+",
+  "attendees": "300+",
       "attendees_label": "Participants",
   "workshops": "3",
       "workshops_label": "Ateliers pratiques",
@@ -95,7 +95,7 @@
   "dateDesc": "Journée complète",
   "location": "Lomé, Togo",
   "venue": "Institut Français du Togo",
-  "capacity": "150+ Participants",
+  "capacity": "300+ Participants",
   "networking": "Networking premium",
   "benefits": "Goodies inclus",
   "swag": "Certificats & plus",
@@ -138,33 +138,49 @@
     "title": "Devenez sponsor – LOSL-CON 2025",
   "subtitle": "Accédez à une audience engagée. Gagnez en visibilité. Recrutez vos futurs talents.",
     "badges": {
+      "premium": "Premium Elite",
       "top": "Top visibilité",
       "popular": "Populaire"
     },
     "tiers": {
+      "diamond": {
+        "name": "Diamond",
+        "benefit1": "Logo géant sur scène & site",
+        "benefit2": "Keynote d'ouverture (10-15 min)",
+        "benefit3": "Espace stand exclusif premium",
+        "benefit4": "20 Pass VIP + accès backstage",
+        "benefit5": "Campagne marketing dédiée",
+        "benefit6": "Co-branding événement",
+        "benefit7": "Interview vidéo exclusive"
+      },
       "gold": {
         "name": "Gold",
         "benefit1": "Logo XXL sur scène & site",
-        "benefit2": "Message d’ouverture (3–5 min)",
+  "benefit2": "Message d’ouverture (3–5 min)",
         "benefit3": "Espace stand premium",
-        "benefit4": "10 Pass VIP",
-        "benefit5": "Campagnes sur nos réseaux"
+  "benefit4": "10 Pass VIP",
+  "benefit5": "Campagnes sur nos réseaux",
+  "benefit6": "Mention dans newsletter",
+  "benefit7": "Accès VIP networking"
       },
       "silver": {
         "name": "Silver",
         "benefit1": "Grand logo sur scène & site",
         "benefit2": "Participation à un panel",
         "benefit3": "Espace stand dédié",
-        "benefit4": "6 Pass",
-        "benefit5": "Mention newsletter"
+  "benefit4": "6 Pass",
+  "benefit5": "Mention newsletter",
+  "benefit6": "Post réseaux sociaux",
+  "benefit7": "Accès networking"
       },
       "bronze": {
         "name": "Bronze",
         "benefit1": "Logo sur site & écrans",
-        "benefit2": "3 Pass",
+  "benefit2": "3 Pass",
         "benefit3": "Merci sur réseaux sociaux",
         "benefit4": "Ajout goodies dans le swag",
-        "benefit5": "Listing sur la page sponsors"
+  "benefit5": "Listing sur la page sponsors",
+  "benefit6": "Accès au cocktail networking"
       },
       "custom": {
         "name": "Autre contribution",
@@ -177,15 +193,20 @@
       }
     },
     "features": {
+  "exclusive": "Exclusivité totale",
+  "cobranding": "Co-branding",
+  "keynote": "Keynote exclusive",
+  "backstage": "Accès backstage",
       "mediaBoost": "Media boost",
       "talentReach": "Talent reach",
       "sceneTime": "Scene time"
     },
     "cta": {
-      "gold": "Je deviens sponsor",
-      "silver": "Je deviens sponsor",
-      "bronze": "Je deviens sponsor",
-      "custom": "Je deviens sponsor"
+  "diamond": "Je deviens sponsor",
+  "gold": "Je deviens sponsor",
+  "silver": "Je deviens sponsor",
+  "bronze": "Je deviens sponsor",
+  "custom": "Je deviens sponsor"
     },
     "contact": {
       "heading": "Pour toute demande ou proposition de sponsoring, contactez-nous à :"
