--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -32,7 +32,7 @@
     "stats": {
   "speakers": "5",
       "speakers_label": "Speakers experts",
-  "attendees": "300+",
+  "attendees": "300–500",
       "attendees_label": "Participants",
   "workshops": "3",
       "workshops_label": "Ateliers pratiques",
@@ -95,7 +95,7 @@
   "dateDesc": "Journée complète",
   "location": "Lomé, Togo",
   "venue": "Institut Français du Togo",
-  "capacity": "300+ Participants",
+  "capacity": "300–500 Participants",
   "networking": "Networking premium",
   "benefits": "Goodies inclus",
   "swag": "Certificats & plus",
