feat: add sold out support for tickets (database, admin, API, UI, i18n, migration) This commit introduces support for marking tickets as sold out throughout the application. It includes:
Database: Adds a new soldout boolean column to the tickets table (schema and migration).
Backend/API: Updates ticket creation, update, and retrieval endpoints to handle the soldout field; provides a new admin endpoint to toggle sold out state; blocks event registration for sold out tickets.
Admin UI: Allows marking tickets as sold out when creating or editing via dashboard; displays a 'Sold out' badge and disables actions for sold out tickets; provides a quick toggle button for sold out state.
Public UI: Disables registration for sold out tickets; visually indicates sold out tickets in registration and ticket listing pages.
i18n: Adds translation keys for sold out badges and admin actions in English and French.
Migration: Updates the migration journal to track this schema change.
All aspects of the sold out state are handled atomically, ensuring that the feature works end-to-end and can be reviewed or reverted in a single commit.

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -120,7 +120,14 @@
       "register": "Register Now",
       "sponsor": "Become a Sponsor"
     },
-    "help": "Questions about tickets? Contact us for more information."
+    "help": "Questions about tickets? Contact us for more information.",
+    "badges": {
+      "soldout": "Sold out"
+    },
+    "admin": {
+      "markSoldout": "Mark as sold out",
+      "markAvailable": "Mark as available"
+    }
   },
   "footer": {
     "rights": "© {{year}} LOSL-C. All rights reserved.",
